@@ -110,18 +110,15 @@ if ($create_action) {
 	$field2 = (string) get_parameter ('field2');
 	$field3 = (string) get_parameter ('field3');
 	$group = (string) get_parameter ('group');
-	$action_threshold = (int) get_parameter ('action_threshold');
 
 	$result = create_alert_action ($name, $id_alert_command,
 		array ('field1' => $field1,
 			'field2' => $field2,
 			'field3' => $field3,
-			'id_group' => $group,
-			'action_threshold' => $action_threshold));
+			'id_group' => $group));
 		
 	$info = 'Name: ' . $name . ' ID alert Command: ' . $id_alert_command .
-		' Field1: ' . $field1 . ' Field2: ' . $field2 . ' Field3: ' . $field3 . ' Group: ' . $group .
-		' Action threshold: ' . $action_threshold;
+		' Field1: ' . $field1 . ' Field2: ' . $field2 . ' Field3: ' . $field3 . ' Group: ' . $group;
 		
 	if ($result) {
 		pandora_audit("Command management", "Create alert action " . $result, false, false, $info);
@@ -162,7 +159,6 @@ if ($update_action) {
 	$field2 = (string) get_parameter ('field2');
 	$field3 = (string) get_parameter ('field3');
 	$group = get_parameter ('group');
-	$action_threshold = (int) get_parameter ('action_threshold');
 
 	$values = array ();
 	$values['name'] = $name;
@@ -171,13 +167,11 @@ if ($update_action) {
 	$values['field2'] = $field2;
 	$values['field3'] = $field3;
 	$values['id_group'] = $group;
-	$values['action_threshold'] = $action_threshold;
 
 	$result = update_alert_action ($id, $values);
 	
 	$info = 'Name: ' . $name . ' ID alert Command: ' . $id_alert_command .
-		' Field1: ' . $field1 . ' Field2: ' . $field2 . ' Field3: ' . $field3 . ' Group: ' . $group .
-		' Action threshold: ' . $action_threshold;
+		' Field1: ' . $field1 . ' Field2: ' . $field2 . ' Field3: ' . $field3 . ' Group: ' . $group;
 		
 	if ($result) {
 		pandora_audit("Command management", "Update alert action " . $id, false, false, json_encode($values));
