@@ -1,3 +1,11 @@
+2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+ 
+      * godmode/alerts/alert_list.list.php
+        godmode/alerts/configure_alert_action.php
+        godmode/alerts/alert_actions.php
+        godmode/alerts/alert_list.builder.php: Fixed mistake merging bugfix from 
+	trunk about alert actions thresholds.
+	
 2011-02-19  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/functions_fsgraph.php: Merged from trunk. Fixed html
